Feat: Ajout de la fonctionnalité de partage de simulation via URL

--- a/src/index.html
+++ b/src/index.html
@@ -228,9 +228,9 @@
             </div>
         </div>
         
-        <!-- Bouton de téléchargement flottant -->
+        <!-- Bouton de partage flottant -->
         <button class="download-button" id="downloadBtn">
-            <i class="fas fa-download"></i> Télécharger la simulation
+            <i class="fas fa-share-alt"></i> Générer un lien public
         </button>
     </main>
     
